--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  expandable: ^5.0.1
   google_fonts:
   lottie:
   flutter_switch :
@@ -46,7 +47,7 @@ dependencies:
   toggle_switch:
   animated_toggle_switch:
   flutter_neumorphic: ^3.2.0
-  expandable: ^5.0.1
+  provider: ^6.0.5
 
 
 dev_dependencies:
