--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,8 +27,9 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin:  'com.google.gms.google-services'
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 33
     ndkVersion flutter.ndkVersion
+//    multiDexEnabled true
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
