--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,19 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   flutter_neumorphic: ^3.2.0
   provider: ^6.0.5
+  shared_preferences:
+  hive_flutter:
+  hive:
+  flutter_local_notifications: ^13.0.0
+  sqflite: ^2.2.4+1
+  intl:
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator:
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,6 +76,8 @@ flutter:
     - doctor.json
     - assets/lottie/
     - assets/images/
+    - assets/Alarm Clock.mp3
+    - android/app/src/main/res/raw/noti.mp3
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
