--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   expandable: ^5.0.1
-  google_fonts:
+  google_fonts: ^5.1.0
   lottie:
   flutter_switch :
-  firebase_auth:
-  firebase_core: ^2.1.1
-  cloud_firestore: ^4.3.1
+  firebase_auth: ^4.7.3
+
+  cloud_firestore:
   firebase_storage:
   toggle_switch:
   animated_toggle_switch:
   smooth_page_indicator: ^1.0.0+2
-  flutter_neumorphic: ^3.2.0
+#  flutter_neumorphic: ^3.2.0
   provider: ^6.0.5
   shared_preferences:
   hive_flutter:
@@ -45,6 +45,12 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   sqflite: ^2.2.4+1
   intl:
+  get:
+  pinput: ^3.0.1
+  avatar_glow: ^3.0.1
+  font_awesome_flutter: ^10.6.0
+
+
 
 
 dev_dependencies:
