--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   pinput: ^3.0.1
   avatar_glow: ^3.0.1
   font_awesome_flutter: ^10.6.0
+  google_nav_bar: ^5.0.6
+  line_icons: ^2.0.3
 
 
 
