--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.3
+  quickalert: ^1.0.2
+#  flutter_screenutil: ^5.9.0
+
 
 
 
