--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,11 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.3
+  flutter_secure_storage: ^9.0.0
+
   quickalert: ^1.0.2
 #  flutter_screenutil: ^5.9.0
+
 
 
 
